{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 2469,
  "lineage": "d44e4c0d-64b5-856c-70cf-2e887c030559",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "armageddon_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e8451895c466aa7",
            "arn": "arn:aws:ec2:us-east-1:975598471165:elastic-ip/eipalloc-01e8451895c466aa7",
            "domain": "vpc",
            "id": "eipalloc-01e8451895c466aa7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-213-74-172.compute-1.amazonaws.com",
            "public_ip": "3.213.74.172",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-nat-eip01"
            },
            "tags_all": {
              "Name": "armageddon-final-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "armageddon_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ff62358b87c7116",
            "arn": "arn:aws:ec2:us-east-1:975598471165:instance/i-0a8db5116f3c7c092",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-final-instance-profile01",
            "id": "i-0a8db5116f3c7c092",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05e923ca152786c5b"
              }
            ],
            "primary_network_interface_id": "eni-05e923ca152786c5b",
            "private_dns": "ip-10-108-101-182.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.108.101.182",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0899bd675627f823f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddebe880d9d89676",
            "tags": {
              "Name": "armageddon-final-ec201"
            },
            "tags_all": {
              "Name": "armageddon-final-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067b6f20b11ed6a37"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "i-0a8db5116f3c7c092",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.armageddon_instance_profile01",
            "aws_iam_role.armageddon_ec2_role01",
            "aws_security_group.armageddon_ec2_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "armageddon_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ff62358b87c7116",
            "arn": "arn:aws:ec2:us-east-1:975598471165:instance/i-001450422fead5229",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "armageddon-final-instance-profile01",
            "id": "i-001450422fead5229",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d2850e83f8d630c0"
              }
            ],
            "primary_network_interface_id": "eni-0d2850e83f8d630c0",
            "private_dns": "ip-10-108-101-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.108.101.250",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d1b4a58c5cccb0cc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ddebe880d9d89676",
            "tags": {
              "Name": "armageddon-final-ec201-private"
            },
            "tags_all": {
              "Name": "armageddon-final-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067b6f20b11ed6a37"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "i-001450422fead5229",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.armageddon_instance_profile01",
            "aws_iam_role.armageddon_ec2_role01",
            "aws_security_group.armageddon_ec2_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "armageddon_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:internet-gateway/igw-0e572604d0404e9c9",
            "id": "igw-0e572604d0404e9c9",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-igw01"
            },
            "tags_all": {
              "Name": "armageddon-final-igw01"
            },
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "armageddon_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "armageddon-final-alb-logs-975598471165",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/1dd0944bc313d4c5",
            "arn_suffix": "app/armageddon-final-alb01/1dd0944bc313d4c5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "armageddon-final-alb01-707380577.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/1dd0944bc313d4c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "armageddon-final-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-07870165dc5729bba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a10f303fbedd411"
              },
              {
                "subnet_id": "subnet-078101f3f5b19dfcc"
              }
            ],
            "subnets": [
              "subnet-00a10f303fbedd411",
              "subnet-078101f3f5b19dfcc"
            ],
            "tags": {
              "Name": "armageddon-final-alb01"
            },
            "tags_all": {
              "Name": "armageddon-final-alb01"
            },
            "vpc_id": "vpc-0a9f04594af7e723f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/1dd0944bc313d4c5"
          },
          "dependencies": [
            "aws_s3_bucket.armageddon_alb_logs_bucket01",
            "aws_security_group.armageddon_alb_sg01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_caller_identity.armageddon_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "armageddon_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/1dd0944bc313d4c5/a5a05faacfba381e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/534100e1d43ac3da",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/1dd0944bc313d4c5/a5a05faacfba381e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/1dd0944bc313d4c5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/1dd0944bc313d4c5/a5a05faacfba381e"
          },
          "dependencies": [
            "aws_lb.armageddon_alb01",
            "aws_lb_target_group.armageddon_tg01",
            "aws_s3_bucket.armageddon_alb_logs_bucket01",
            "aws_security_group.armageddon_alb_sg01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_caller_identity.armageddon_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "armageddon_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54",
            "certificate_arn": "arn:aws:acm:us-east-1:975598471165:certificate/0eb56ed4-3dd1-4cb4-9009-f21f8976161a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Access Denied - Origin Header Required",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:loadbalancer/app/armageddon-final-alb01/1dd0944bc313d4c5",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01_dns_bonus",
            "aws_lb.armageddon_alb01",
            "aws_route53_record.armageddon_acm_validation_records01",
            "aws_s3_bucket.armageddon_alb_logs_bucket01",
            "aws_security_group.armageddon_alb_sg01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_caller_identity.armageddon_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "armageddon_default_block01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener-rule/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54/a62426793bf0fb8d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener-rule/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54/a62426793bf0fb8d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54",
            "priority": 99,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener-rule/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54/a62426793bf0fb8d"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01_dns_bonus",
            "aws_lb.armageddon_alb01",
            "aws_lb_listener.armageddon_https_listener01",
            "aws_route53_record.armageddon_acm_validation_records01",
            "aws_s3_bucket.armageddon_alb_logs_bucket01",
            "aws_security_group.armageddon_alb_sg01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_caller_identity.armageddon_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "armageddon_require_origin_header01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/534100e1d43ac3da",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener-rule/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54/649c40d04029d1b3",
            "condition": [
              {
                "host_header": [],
                "http_header": [
                  {
                    "http_header_name": "X-armageddon-Growl",
                    "regex_values": [],
                    "values": [
                      "DEacIMrMFKWG7MfsbKDs5PDvOr6tDLRi"
                    ]
                  }
                ],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener-rule/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54/649c40d04029d1b3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54",
            "priority": 1,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "condition"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:listener-rule/app/armageddon-final-alb01/1dd0944bc313d4c5/f8ac5766a6c6ca54/649c40d04029d1b3"
          },
          "dependencies": [
            "aws_acm_certificate.armageddon_acm_cert01",
            "aws_acm_certificate_validation.armageddon_acm_validation01_dns_bonus",
            "aws_lb.armageddon_alb01",
            "aws_lb_listener.armageddon_https_listener01",
            "aws_lb_target_group.armageddon_tg01",
            "aws_route53_record.armageddon_acm_validation_records01",
            "aws_s3_bucket.armageddon_alb_logs_bucket01",
            "aws_security_group.armageddon_alb_sg01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_caller_identity.armageddon_self01",
            "random_password.armageddon_origin_header_value01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "armageddon_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/534100e1d43ac3da",
            "arn_suffix": "targetgroup/armageddon-final-tg01/534100e1d43ac3da",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/534100e1d43ac3da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "armageddon-final-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "armageddon-final-tg01"
            },
            "tags_all": {
              "Name": "armageddon-final-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/534100e1d43ac3da"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "armageddon_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/534100e1d43ac3da-20260221220505997000000010",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:975598471165:targetgroup/armageddon-final-tg01/534100e1d43ac3da",
            "target_id": "i-001450422fead5229"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.armageddon_instance_profile01",
            "aws_iam_role.armageddon_ec2_role01",
            "aws_instance.armageddon_ec201_private_bonus",
            "aws_lb_target_group.armageddon_tg01",
            "aws_security_group.armageddon_ec2_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "armageddon_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01e8451895c466aa7",
            "association_id": "eipassoc-050178c3630b6b8ec",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-020e0c2983a852845",
            "network_interface_id": "eni-077030a6ce1e4def2",
            "private_ip": "10.108.1.31",
            "public_ip": "3.213.74.172",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00a10f303fbedd411",
            "tags": {
              "Name": "armageddon-final-nat01"
            },
            "tags_all": {
              "Name": "armageddon-final-nat01"
            },
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.armageddon_nat_eip01",
            "aws_internet_gateway.armageddon_igw01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "armageddon_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ebe7ed9b449c87421080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-020e0c2983a852845",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ebe7ed9b449c8742",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0ebe7ed9b449c8742"
          },
          "dependencies": [
            "aws_eip.armageddon_nat_eip01",
            "aws_internet_gateway.armageddon_igw01",
            "aws_nat_gateway.armageddon_nat01",
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "armageddon_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e572604d0404e9c9",
            "id": "r-rtb-0cac1e57c2cbe50761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0cac1e57c2cbe5076",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0cac1e57c2cbe5076"
          },
          "dependencies": [
            "aws_internet_gateway.armageddon_igw01",
            "aws_route_table.armageddon_public_rt01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "armageddon_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:route-table/rtb-0ebe7ed9b449c8742",
            "id": "rtb-0ebe7ed9b449c8742",
            "owner_id": "975598471165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "armageddon-final-private-rt01"
            },
            "tags_all": {
              "Name": "armageddon-final-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "rtb-0ebe7ed9b449c8742",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "armageddon_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:route-table/rtb-0cac1e57c2cbe5076",
            "id": "rtb-0cac1e57c2cbe5076",
            "owner_id": "975598471165",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "armageddon-final-public-rt01"
            },
            "tags_all": {
              "Name": "armageddon-final-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "rtb-0cac1e57c2cbe5076",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "armageddon_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0113dcb09e07637d0",
            "region": "us-east-1",
            "route_table_id": "rtb-0ebe7ed9b449c8742",
            "subnet_id": "subnet-0ddebe880d9d89676"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8c98ba0b1d554bb",
            "region": "us-east-1",
            "route_table_id": "rtb-0ebe7ed9b449c8742",
            "subnet_id": "subnet-03b18759d5702f077"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "armageddon_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08778471fbd3a3002",
            "region": "us-east-1",
            "route_table_id": "rtb-0cac1e57c2cbe5076",
            "subnet_id": "subnet-00a10f303fbedd411"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_public_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9ce51b7591f607b",
            "region": "us-east-1",
            "route_table_id": "rtb-0cac1e57c2cbe5076",
            "subnet_id": "subnet-078101f3f5b19dfcc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.armageddon_public_rt01",
            "aws_subnet.armageddon_public_subnets",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:security-group/sg-07870165dc5729bba",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound to target group (usually 80) to private network",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07870165dc5729bba",
            "ingress": [],
            "name": "armageddon-final-alb-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-final-alb-sg01"
            },
            "tags_all": {
              "Name": "armageddon-final-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-07870165dc5729bba",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:security-group/sg-067b6f20b11ed6a37",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067b6f20b11ed6a37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "armageddon-final-ec2-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-final-ec2-sg01"
            },
            "tags_all": {
              "Name": "armageddon-final-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-067b6f20b11ed6a37",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:security-group/sg-02f97aa9f750f47f9",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f97aa9f750f47f9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-067b6f20b11ed6a37"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "armageddon-final-rds-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-final-rds-sg01"
            },
            "tags_all": {
              "Name": "armageddon-final-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-02f97aa9f750f47f9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_ec2_sg01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "armageddon_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:security-group/sg-07825936c57266b75",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-07825936c57266b75",
            "ingress": [],
            "name": "armageddon-final-vpce-sg01",
            "name_prefix": "",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "armageddon-final-vpce-sg01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "sg-07825936c57266b75",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "armageddon_alb_ingress_cf44301",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-465423484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [
              "pl-3b927c52"
            ],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07870165dc5729bba",
            "security_group_rule_id": "sgr-0934c9890e14a927d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.armageddon_alb_sg01",
            "aws_vpc.armageddon_vpc01",
            "data.aws_ec2_managed_prefix_list.armageddon_cf_origin_facing01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "armageddon_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-4041166640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-067b6f20b11ed6a37",
            "security_group_rule_id": "sgr-0e2214dc72caf39ef",
            "self": false,
            "source_security_group_id": "sg-07870165dc5729bba",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.armageddon_alb_sg01",
            "aws_security_group.armageddon_ec2_sg01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "armageddon_vpce_sg01_ingress_https_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS from EC2 SG",
            "from_port": 443,
            "id": "sgrule-2275138713",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-07825936c57266b75",
            "security_group_rule_id": "sgr-04c42c35f25e0226e",
            "self": false,
            "source_security_group_id": "sg-067b6f20b11ed6a37",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.armageddon_ec2_sg01",
            "aws_security_group.armageddon_vpce_sg01",
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "armageddon_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:subnet/subnet-0ddebe880d9d89676",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.108.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddebe880d9d89676",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-private-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-final-private-subnet01"
            },
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-0ddebe880d9d89676",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:subnet/subnet-03b18759d5702f077",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.108.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b18759d5702f077",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-private-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-final-private-subnet02"
            },
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-03b18759d5702f077",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "armageddon_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:subnet/subnet-00a10f303fbedd411",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.108.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a10f303fbedd411",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-public-subnet01"
            },
            "tags_all": {
              "Name": "armageddon-final-public-subnet01"
            },
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-00a10f303fbedd411",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:subnet/subnet-078101f3f5b19dfcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.108.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078101f3f5b19dfcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975598471165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-public-subnet02"
            },
            "tags_all": {
              "Name": "armageddon-final-public-subnet02"
            },
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "subnet-078101f3f5b19dfcc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.armageddon_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "armageddon_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc/vpc-0a9f04594af7e723f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.108.0.0/16",
            "default_network_acl_id": "acl-0b092d09e3c5f8f60",
            "default_route_table_id": "rtb-0436eef8ff98312f4",
            "default_security_group_id": "sg-0443a584e82145add",
            "dhcp_options_id": "dopt-03e61696f1f7e3e27",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9f04594af7e723f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0436eef8ff98312f4",
            "owner_id": "975598471165",
            "region": "us-east-1",
            "tags": {
              "Name": "armageddon-final-vpc01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpc-0a9f04594af7e723f",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-0b0d58f946e2377fe",
            "dns_entry": [
              {
                "dns_name": "vpce-0b0d58f946e2377fe-8vopvzus.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b0d58f946e2377fe-8vopvzus-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b0d58f946e2377fe-8vopvzus-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0668278TKSCD1PYQF5O"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b0d58f946e2377fe",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07caba7fe584d7284",
              "eni-07dc123d1ea891bd6"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07825936c57266b75"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.72",
                "subnet_id": "subnet-0ddebe880d9d89676"
              },
              {
                "ipv4": "10.108.102.133",
                "subnet_id": "subnet-03b18759d5702f077"
              }
            ],
            "subnet_ids": [
              "subnet-03b18759d5702f077",
              "subnet-0ddebe880d9d89676"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0b0d58f946e2377fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-04c4ad4d4b28b0193",
            "dns_entry": [
              {
                "dns_name": "vpce-04c4ad4d4b28b0193-vy8utc19.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04c4ad4d4b28b0193-vy8utc19-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04c4ad4d4b28b0193-vy8utc19-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06578402SWB0CH6KOVFQ"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z09925221B4VJEFZH17Z9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04c4ad4d4b28b0193",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b6cd781444ae802c",
              "eni-0fa7e551c580ecf54"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07825936c57266b75"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.240",
                "subnet_id": "subnet-0ddebe880d9d89676"
              },
              {
                "ipv4": "10.108.102.126",
                "subnet_id": "subnet-03b18759d5702f077"
              }
            ],
            "subnet_ids": [
              "subnet-03b18759d5702f077",
              "subnet-0ddebe880d9d89676"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-kms01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-04c4ad4d4b28b0193",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-096f7134761412f82",
            "dns_entry": [
              {
                "dns_name": "vpce-096f7134761412f82-rlgh3owd.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-096f7134761412f82-rlgh3owd-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-096f7134761412f82-rlgh3owd-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z066828536EK1B6ZB5S91"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04549922041VV3H27EPF"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04517703VKUTS603WK7W"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z065646630CYIXKUYWIH2"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-096f7134761412f82",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05f029de1ea4f778c",
              "eni-0eed060da1ce2a531"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07825936c57266b75"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.134",
                "subnet_id": "subnet-0ddebe880d9d89676"
              },
              {
                "ipv4": "10.108.102.240",
                "subnet_id": "subnet-03b18759d5702f077"
              }
            ],
            "subnet_ids": [
              "subnet-03b18759d5702f077",
              "subnet-0ddebe880d9d89676"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-logs01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-096f7134761412f82",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-04d9d1b50f29a3522",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04d9d1b50f29a3522",
            "ip_address_type": "ipv4",
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ebe7ed9b449c8742"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "armageddon-final-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-04d9d1b50f29a3522",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.armageddon_private_rt01",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-08d12b2074e6f0beb",
            "dns_entry": [
              {
                "dns_name": "vpce-08d12b2074e6f0beb-h8hh1msu.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08d12b2074e6f0beb-h8hh1msu-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08d12b2074e6f0beb-h8hh1msu-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09915761BMUMR8QTHM06"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08d12b2074e6f0beb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09dd8a54effdc2d5c",
              "eni-0cdcc292a70c7a0d5"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07825936c57266b75"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.39",
                "subnet_id": "subnet-0ddebe880d9d89676"
              },
              {
                "ipv4": "10.108.102.65",
                "subnet_id": "subnet-03b18759d5702f077"
              }
            ],
            "subnet_ids": [
              "subnet-03b18759d5702f077",
              "subnet-0ddebe880d9d89676"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-secrets01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-08d12b2074e6f0beb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-08646ef0a5783599a",
            "dns_entry": [
              {
                "dns_name": "vpce-08646ef0a5783599a-i6ny8uu3.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08646ef0a5783599a-i6ny8uu3-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08646ef0a5783599a-i6ny8uu3-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z045353433NLQWGWHVSRI"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z06582472ZJAFK8A6LBTI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08646ef0a5783599a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0520069a25a4eda71",
              "eni-05fe4b896c3b6d9eb"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07825936c57266b75"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.146",
                "subnet_id": "subnet-0ddebe880d9d89676"
              },
              {
                "ipv4": "10.108.102.189",
                "subnet_id": "subnet-03b18759d5702f077"
              }
            ],
            "subnet_ids": [
              "subnet-03b18759d5702f077",
              "subnet-0ddebe880d9d89676"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-ssm01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-08646ef0a5783599a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "armageddon_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975598471165:vpc-endpoint/vpce-0533fe6054ef67138",
            "dns_entry": [
              {
                "dns_name": "vpce-0533fe6054ef67138-iar5x93e.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0533fe6054ef67138-iar5x93e-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0533fe6054ef67138-iar5x93e-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06564281LLW9O1P8LGBL"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z04521871NZVB84K49W4G"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0533fe6054ef67138",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01410bf995e31b422",
              "eni-0b722fafef550aeaf"
            ],
            "owner_id": "975598471165",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07825936c57266b75"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.108.101.47",
                "subnet_id": "subnet-0ddebe880d9d89676"
              },
              {
                "ipv4": "10.108.102.61",
                "subnet_id": "subnet-03b18759d5702f077"
              }
            ],
            "subnet_ids": [
              "subnet-03b18759d5702f077",
              "subnet-0ddebe880d9d89676"
            ],
            "tags": {
              "Name": "armageddon-final-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "armageddon-final-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a9f04594af7e723f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "975598471165",
            "id": "vpce-0533fe6054ef67138",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.armageddon_vpce_sg01",
            "aws_subnet.armageddon_private_subnets",
            "aws_vpc.armageddon_vpc01",
            "data.aws_region.armageddon_region01"
          ]
        }
      ]
    }
  ]
}